# mlb_counterpunch_index

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: metric_v0.md
scripts/: check_metric_v0_sample.py  data.py  download_statcast.py  judge_breakdown.py  player_breakdown.py  run_v0_leaderboard.py  validate_leaderboard_csv.py
src/counterpunch/: __init__.py  buckets.py  loss_events.py  metric.py
