[project]
name = "mlb-counterpunch-index"
version = "0.1.0"
description = "Early scaffold for MLB Counterpunch Index analysis."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
